--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Django Tailwind</title>
+    <title>Therapy Connected</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -40,6 +40,7 @@
             <nav class="hidden lg:flex absolute left-1/2 top-1/2 transform -translate-x-1/2 -translate-y-1/2 flex-wrap gap-4 lg:space-x-6 lg:gap-0 mx-auto justify-center">
                 <a href="/" class="font-medium nav-link" style="color: #555B6E;">Home</a>
                 <a href="#" class="font-medium nav-link" style="color: #555B6E;">Therapists</a>
+                <a href="/blog/" class="font-medium nav-link" style="color: #555B6E;">Blog</a>
                 <a href="#" class="font-medium nav-link" style="color: #555B6E;">Features</a>
                 <a href="#" class="font-medium nav-link" style="color: #555B6E;">Pricing</a>
                 <a href="#" class="font-medium nav-link" style="color: #555B6E;">About</a>
@@ -55,6 +56,7 @@
                 <nav class="flex flex-col gap-2 bg-white rounded shadow p-4 items-center text-center">
                     <a href="/" class="font-medium nav-link" style="color: #555B6E;">Home</a>
                     <a href="#" class="font-medium nav-link" style="color: #555B6E;">Therapists</a>
+                    <a href="/blog/" class="font-medium nav-link" style="color: #555B6E;">Blog</a>
                     <a href="#" class="font-medium nav-link" style="color: #555B6E;">Features</a>
                     <a href="#" class="font-medium nav-link" style="color: #555B6E;">Pricing</a>
                     <a href="#" class="font-medium nav-link" style="color: #555B6E;">About</a>
